# streamtfhd

./: .gitignore  README.md  install.sh  quick-setup-and-installation.sh  test.sh  uninstall.sh
streamtfhd-backend/: Cargo.toml  dependencies.txt  env.dev  env.prod
streamtfhd-backend/migrations/: 20260110003743_create_users_table.sql  20260117154446_create_videos_table.sql  20260123030144_live_streams.sql  20260131131413_live_stream_history.sql
streamtfhd-backend/src/: dto.rs  errors.rs  main.rs  models.rs  utils.rs  view_models.rs  views.rs
streamtfhd-backend/src/dto/: gallery_get_videos.rs  live_stream_create_stream.rs  live_stream_create_stream_search_video.rs  live_stream_edit_stream_get.rs  live_stream_edit_stream_post.rs  live_stream_history.rs  live_stream_monitor.rs  live_stream_search_stream.rs  live_stream_start.rs  live_stream_state.rs  live_stream_write_history.rs  settings_profile_settings_get.rs  settings_profile_settings_post.rs  settings_security_settings.rs
streamtfhd-backend/src/models/: database.rs  gallery_delete_all_videos.rs  gallery_delete_video.rs  gallery_get_videos.rs  gallery_import_from_drive.rs  gallery_rename_video.rs  gallery_search_video.rs  gallery_upload_video.rs  get_avatar.rs  get_user_id_from_username.rs  history.rs  history_delete.rs  history_delete_all.rs  history_search.rs  live_stream_cancel.rs  live_stream_create_stream.rs  live_stream_create_stream_search_video.rs  live_stream_delete_stream.rs  live_stream_edit_stream_get.rs  (+21 more)
streamtfhd-reset-password/: Cargo.toml  env.file
streamtfhd-reset-password/src/: main.rs
(+150 files in other folders)
