[package]
name = "streamtfhd-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
actix-cors = "0.7.1"
actix-multipart = "0.6"
actix-ws = "0.3.0"
actix-files = "0.6.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [ "postgres", "runtime-tokio-native-tls", "macros" ] }
futures-util = "0.3"
sanitize-filename = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-appender = "0.2"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
argon2 = { version = "0.5.3", features = ["std"] }
uuid = { version = "1", features = ["v4", "serde"] }
mime_guess = "2.0.5"
jsonwebtoken = { version = "10.2.0", features = [ "rust_crypto" ] }
dotenvy = "0.15"
sysinfo = "0.37.2"
urlencoding = "2.1.3"
reqwest = { version = "0.12", features = ["stream", "cookies", "rustls-tls"] }
regex = "1"
dashmap = "5"
anyhow = "1"
nix = { version = "0.27", features = ["signal"] }